[package]
name = "adstxt"
version = "0.1.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "This library provides a parser for ads.txt."
repository = "https://github.com/mechiru/adstxt"
documentation = "https://docs.rs/adstxt"
categories = ["parser-implementations"]
keywords = ["iab", "adstxt"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

